fix: prevent layout shift in view template admin dashboard

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -139,7 +139,7 @@
     display: flex;
     flex-direction: column;
     position: absolute;
-    right: 18px;
+    right: 40px;
     margin-top: 4px;
     width: 170px;
     border: 1px solid black;
@@ -163,7 +163,7 @@
 }
 
 .dropdown-content-button:hover {
-    background-color: rgba(0, 0, 0, 0.048);
+    background-color: rgba(0, 0, 0, 0.05);
 }
 
 .color-palette {
@@ -353,7 +353,7 @@
 .chip, .chip-active {
     padding: 2px 6px;
     font-size: 13px;
-    border: 1px solid rgba(0, 0, 0, 0.5);
+    border: 1px solid rgba(0, 0, 0, 0.3);
     background-color: white;    
     color: rgba(0, 0, 0, 0.5);
     cursor: pointer;
